# react-native-qdrant-edge

./: .gitignore  NitroQdrantEdge.podspec  README.md  app.plugin.js  nitro.json  package-lock.json  package.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/qdrantedge/: NitroQdrantEdgePackage.kt
cpp/: HybridQdrantEdge.hpp  HybridQdrantEdgeShard.hpp  qdrant_edge_ffi.h
example/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
example/app/: _layout.tsx  benchmark.tsx  emoji.tsx  index.tsx
ios/: Bridge.h
rust/qdrant-edge-ffi/: Cargo.toml  cbindgen.toml
rust/qdrant-edge-ffi/src/: lib.rs
scripts/: build-android.sh  build-ios.sh  dev.js  postinstall.js  prepack.js
src/: hooks.ts  index.ts  types.ts
src/specs/: QdrantEdge.nitro.ts  QdrantEdgeShard.nitro.ts
