[package]
name = "qdrant-edge-ffi"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
qdrant-edge = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
